cmake_minimum_required(VERSION 3.17)
project(Sem3Lab1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Sem3Lab1 main.cpp)
add_executable(Test01 dynamicArrayTest.cpp)
add_executable(test02 linkedListTest.cpp)
add_executable(test03 ArrSeqTest.cpp)
add_executable(test04 LinkedSequenceTest.cpp)
add_executable(test05 SortTest.cpp)